--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,5 +1,5 @@
 <header>
-    <div>
+    <div class="nav-left-section">
         <a href="{{ shop.url }}">
             <img 
                 width = "70"
@@ -8,8 +8,23 @@
             >
         </a>
     </div>
-</header>
 
+    <div class = "nav-middle-section">
+        <ul>
+            {% for link in linklists.main-menu.links %}
+                <li>
+                    <a href="{{ link.url }}" title="{{ link.title }}">
+                        {{ link.title }}
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+
+</header>
+<style>
+
+</style>
 {%scheme%}{
     "name": "Header",
     "settings": [ {
