--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,6 +1,6 @@
 <header>
     <div class="nav-left-section">
-        {% if {{settings.logo-image}} != blank %} 
+        {% if settings.logo-image != blank %} 
         <a href="{{ shop.url }}">
             <img 
                 width = "70"
