--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,41 +1,83 @@
 <header>
-    <div class="nav-left-section">
-        {% if settings.logo-image != blank %} 
-        <a href="{{ shop.url }}">
-            <img 
-                width = "70"
-                height = "60"
-                loading = "lazy"
-                src = "{{ settings.logo-image | image_url}}"
-            >
-        </a>
-        {% else %}
-        <a href="{{ shop.url }}">
-            <img
-                width = "70"
-                height = "60"
-                loading = "lazy"
-                src="{{'logo-1.png' | asset_url}}"
-            >
-        </a>
-    {% endif %}
-    </div>
-    
-    <div class = "nav-middle-section">
-        <ul>
-            {% for link in linklists.main-menu.links %}
-                <li>
-                    <a href="{{ link.url }}" title="{{ link.title }}">
-                        {{ link.title }}
-                    </a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
+    <div class="nav-bar">
+        <div class="nav-left-section">
+            {% if settings.logo-image != blank %} 
+            <a href="{{ shop.url }}">
+                <img 
+                    width = "100"
+                    height = "100"
+                    loading = "lazy"
+                    src = "{{ settings.logo-image | image_url}}"
+                >
+            </a>
+            {% else %}
+            <a href="{{ shop.url }}">
+                <img
+                    width = "100"
+                    height = "100"
+                    loading = "lazy"
+                    src="{{'logo-1.png' | asset_url}}"
+                >
+            </a>
+        {% endif %}
+        </div>
+        
+        <div class = "nav-middle-section">
+            <ul>
+                {% for link in linklists.main-menu.links %}
+                    <li>
+                        <a href="{{ link.url }}" title="{{ link.title }}">
+                            {{ link.title }}
+                        </a>
+                    </li>
+                {% endfor %}
+            </ul>
+        </div>
 
+        <div class="nav-right-section">
+            <div>
+                <a href="{{ pages['our-history'].url }}">Our History</a>
+            </div>
+            <form action="/search" >
+                <input type="search" name="q" placeholder="Search products..."/>
+                <button type="submit">Search</button>
+            </form>
+            <div>
+                <a href="/cart">
+                    <img
+                    width = "100"
+                    height = "100"
+                    {% if settings.cart-image != blank %}
+                        src = "{{ settings.cart-image | image_url }}"
+                    {% else  %}
+                        src = "{{ 'cartlogo.png' | asset_url }}"
+                    {% endif %}
+                    >
+                </a>
+            </div>
+        </div>
+    </div>
 </header>
 <style>
+.nav-bar{
+    display:flex;
+    justify-content: space-between;
+}
+.nav-left-section{
+    display: flex;
 
+}
+.nav-middle-section{
+    display: flex;
+    list-style: none;
+    color: inherit;
+    padding:15px;
+}
+.nav-right-section{
+    display: flex;
+    color: inherit;
+    padding: 15px;
+}
 </style>
 {%schema%}{
     "name": "Header",
@@ -49,8 +91,12 @@
         "id": "header-background-color",
         "label": "Header Background Color",
         "default": "#ffffff"
+    },
+    {
+        "type": "image_picker",
+        "id": "cart-image",
+        "label": "Upload cart logo of your choice"
     }
-        
     ]
 }
 
