fixing the middle part in nav

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -67,9 +67,11 @@
     display: flex;
 
 }
+.nav-middle section li {
+    list-style: none;
+}
 .nav-middle-section{
     display: flex;
-    list-style: none;
     color: inherit;
     padding:15px;
 }
