nav bar changes

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -67,24 +67,21 @@
     display: flex;
 
 }
-<<<<<<< HEAD
-.nav-middle section li {
-    list-style: none;
+
+.nav-middle-section li{
+    list-style:none;
 }
 .nav-middle-section{
     display: flex;
-=======
-.nav-middle-section{
-    display: flex;
-    list-style: none;
->>>>>>> 69950d7410a7597f136366f979acbc7ac3636776
     color: inherit;
-    padding:15px;
+    padding: 20px;
+    align-items: center;
 }
 .nav-right-section{
     display: flex;
     color: inherit;
-    padding: 15px;
+    padding: 20px;
+    align-items: center;
 }
 </style>
 {%schema%}{
