more changes to nav

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -72,9 +72,8 @@
     list-style:none;
 }
 
-.nav-middle-section{
+.nav-middle-section ul{
     display: flex;
-    list-style: none;
     color: inherit;
     padding: 20px;
     align-items: center;
