text color setting

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -107,6 +107,12 @@
         "default": "#ffffff"
     },
     {
+        "type": "color",
+        "id": "text-color",
+        "label": "Text Color",
+        "default": "#000000"
+    },
+    {
         "type": "image_picker",
         "id": "cart-image",
         "label": "Upload cart logo of your choice"
