--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -61,6 +61,13 @@
     </div>
 </header>
 <style>
+header a{
+    color : #000000;
+    text-decoration: none;
+}
+header a:hover{
+    text-decoration: underline;
+}
 .nav-bar{
     display:flex;
     justify-content: space-between;
