more changes to text

--- a/sections/product-display.liquid
+++ b/sections/product-display.liquid
@@ -50,10 +50,14 @@
     .product1{
         text-align: center;
     }
+    .product2{
+        text-align: center;
+    
+    }
     div p {
-        font-size: 5px;
+        font-size: 10px;
         font-weight: bold;
-        margin-top: 10px;
+        margin-top: 5px;
     }
 </style>
 {% schema %} {
