--- a/sections/product-display.liquid
+++ b/sections/product-display.liquid
@@ -13,7 +13,7 @@
                         {% endif %}
                     >
                 </a>
-                <p> Sony Alpha 6400 E-mount camera with APS-C sensor (ILCE-6400L)  </p>
+                <p> Sony Alpha 6400 E-mount camera\nwith APS-C sensor (ILCE-6400L)  </p>
             </div>
 
             <div class="product2">
@@ -28,7 +28,7 @@
                         {% endif %}
                     >
                 </a>
-                <p> FX30 Cinema Line Super 35 Camera</p>
+                <p> FX30 Cinema Line\nSuper 35 Camera</p>
             </div>
             
         </div>
@@ -57,7 +57,7 @@
     div p {
         font-size: 10px;
         font-weight: bold;
-        margin-top: 5px;
+        margin-top: 1px;
     }
 </style>
 {% schema %} {
