--- a/sections/product-display.liquid
+++ b/sections/product-display.liquid
@@ -13,7 +13,8 @@
                         {% endif %}
                     >
                 </a>
-                <p> Sony Alpha 6400 E-mount camera\nwith APS-C sensor (ILCE-6400L)  </p>
+                <p> Sony Alpha 6400 E-mount camera
+                    with APS-C sensor (ILCE-6400L)  </p>
             </div>
 
             <div class="product2">
@@ -28,7 +29,8 @@
                         {% endif %}
                     >
                 </a>
-                <p> FX30 Cinema Line\nSuper 35 Camera</p>
+                <p> FX30 Cinema Line
+                    Super 35 Camera</p>
             </div>
             
         </div>
