--- a/sections/product-display.liquid
+++ b/sections/product-display.liquid
@@ -13,7 +13,8 @@
                         {% endif %}
                     >
                 </a>
-                <p> Sony Alpha 6400 E-mount camera\nwith APS-C sensor (ILCE-6400L)  </p>
+                <p> Sony Alpha 6400 E-mount camera
+                    with APS-C sensor (ILCE-6400L)  </p>
             </div>
 
             <div class="product2">
@@ -28,7 +29,8 @@
                         {% endif %}
                     >
                 </a>
-                <p> FX30 Cinema Line\nSuper 35 Camera</p>
+                <p> FX30 Cinema Line
+                    Super 35 Camera</p>
             </div>
             
         </div>
@@ -44,6 +46,7 @@
     }
     .images {
         display:flex;
+        gap: 7px;
         justify-content: space-evenly;
         
     }
@@ -57,7 +60,10 @@
     div p {
         font-size: 10px;
         font-weight: bold;
-        margin-top: 1px;
+    }
+
+    img{
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     }
 </style>
 {% schema %} {
