--- a/templates/page.custom-product1-page.liquid
+++ b/templates/page.custom-product1-page.liquid
@@ -1,54 +1,1 @@
-<main>
-    <div class="camera-scroll">
-        <img
-            width = "300"
-            height = "300"
-            loading = "lazy"
-            class = "sticky-image"
-            {% if settings.product1 != blank %}
-                src = " {{ settings.product1 | image_url }}"
-            {% else %}
-                src = "{{ 'c1.png'| asset_url }}"
-            {% endif %}
-        >
-    </div>
-   
-</main>
-
-<style>
-    main {
-        margin: 0;
-        height: 200%;
-    }
-    .camera-scroll{
-        height: 1000px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .img {
-        padding : 0;
-        margin: 0;
-    }
-    .sticky-image {
-        position: sticky;
-        top: 50%; /* Stick to 50% from the top of the viewport */
-        left: 50%; /* Stick to 50% from the left of the viewport */
-        transform: translate(-50%, -50%); /* Center the image on both axes */
-        max-width: 300px; /* Set a maximum width for the image */
-    }
-</style>
-
-{% schema %} {
-    "name": "product-page-1",
-    "settings": [
-        {
-            "type": "image-picker",
-            "id": "product1",
-            "label": "Choose product image to display"
-        }
-    ]
-}
-
-
-{% endschema %}
+{% section 'product1-page' %}
