--- a/sections/product1-page.liquid
+++ b/sections/product1-page.liquid
@@ -12,6 +12,32 @@
             {% endif %}
         >
     </div>
+    <div class="background">
+        <div class="image">
+            src="{{ 'photo1.jpg'| asset_url }}"
+        </div>
+        <div class="image">
+            src="{{ 'photo2.jpg'| asset_url }}"
+        </div>
+        <div class="image">
+            src="{{ 'photo3.jpg'| asset_url }}"
+        </div>
+        <div class="image">
+            src="{{ 'photo4.jpg'| asset_url }}"
+        </div>
+        <div class="image">
+            src="{{ 'photo5.jpg'| asset_url }}"
+        </div>
+        <div class="image">
+            src="{{ 'photo6.jpg'| asset_url }}"
+        </div>
+        <div class="image">
+            src="{{ 'photo7.jpg'| asset_url }}"
+        </div>
+        <div class="image">
+            src="{{ 'photo8.jpg'| asset_url }}"
+        </div>
+    </div>
    
 </main>
 
@@ -36,7 +62,25 @@
         left: 50%; /* Stick to 50% from the left of the viewport */
         transform: translate(-50%, -50%); /* Center the image on both axes */
         max-width: 300px; /* Set a maximum width for the image */
+        z-index: 999;
     }
+
+    .background{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto;
+        column-gap: 400px;
+        row-gap: 20px;
+        justify-content: center;
+    }   
+
+    .background img{
+        width: 100%; /* Make sure the images take up full width of their container */
+        height: auto; /* Maintain the aspect ratio of the images */
+        display: block; /* Ensure no inline space around the images */
+        max-width: 300px; /* Set a maximum width for each image */
+    }
+
 </style>
 
 {% schema %} {
