--- a/sections/product1-page.liquid
+++ b/sections/product1-page.liquid
@@ -13,30 +13,44 @@
         >
     </div>
     <div class="background">
-        <div class="image">
-            src="{{ 'photo1.jpg'| asset_url }}"
-        </div>
-        <div class="image">
-            src="{{ 'photo2.jpg'| asset_url }}"
-        </div>
-        <div class="image">
-            src="{{ 'photo3.jpg'| asset_url }}"
-        </div>
-        <div class="image">
-            src="{{ 'photo4.jpg'| asset_url }}"
-        </div>
-        <div class="image">
-            src="{{ 'photo5.jpg'| asset_url }}"
-        </div>
-        <div class="image">
-            src="{{ 'photo6.jpg'| asset_url }}"
-        </div>
-        <div class="image">
-            src="{{ 'photo7.jpg'| asset_url }}"
-        </div>
-        <div class="image">
-            src="{{ 'photo8.jpg'| asset_url }}"
-        </div>
+            <img 
+                width= "100%"
+                height = "auto"
+                src="{{ 'photo1.jpg' | asset_url }}">
+            <img 
+                width= "100%"
+                height = "auto"
+                src="{{ 'photo2.jpg' | asset_url }}">
+            <img 
+                width= "100%"
+                height = "auto"
+                src="{{ 'photo3.jpg' | asset_url }}">
+
+
+            <img 
+                width= "100%"
+                height = "auto"
+                src="{{ 'photo4.jpg'| asset_url }}">
+
+            <img 
+                width= "100%"
+                height = "auto"
+                src="{{ 'photo5.jpg'| asset_url }}">
+            <img 
+                width= "100%"
+                height = "auto"
+                src="{{ 'photo6.jpg'| asset_url }}">
+                
+            <img 
+                width= "100%"
+                height = "auto"
+                src="{{ 'photo7.jpg'| asset_url }}">
+                   
+            <img 
+                width= "100%"
+                height = "auto"
+                src="{{ 'photo8.jpg'| asset_url }}">
+    
     </div>
    
 </main>
@@ -75,8 +89,6 @@
     }   
 
     .background img{
-        width: 100%; /* Make sure the images take up full width of their container */
-        height: auto; /* Maintain the aspect ratio of the images */
         display: block; /* Ensure no inline space around the images */
         max-width: 300px; /* Set a maximum width for each image */
     }
