--- a/sections/product1-page.liquid
+++ b/sections/product1-page.liquid
@@ -50,6 +50,7 @@
         left: 50%;
         transform: translateX(-50%);
         text-align: center;
+        z-index: 10;
       }
       
       .scroll-reveal {
