--- a/sections/product1-page.liquid
+++ b/sections/product1-page.liquid
@@ -46,11 +46,11 @@
       .sticky-image {
         position: -webkit-sticky; /* for Safari */
         position: sticky;
-        top: 0;
+        top: 50%;
         left: 50%;
-        transform: translateX(-50%);
+        transform: translate(-50%, -50%);
         text-align: center;
-        z-index: 10;
+        z-index: 999;
       }
       
       .scroll-reveal {
