remove the vertical from translate

--- a/sections/product1-page.liquid
+++ b/sections/product1-page.liquid
@@ -48,7 +48,7 @@
         position: sticky;
         top: 500px;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translateX(-50%);
         text-align: center;
         z-index: 999;
       }
